# pokerc

./: README.md  pokerc.cabal  pokersim.cabal
app/: Main.hs
src/: PokerC.hs
test/: Spec.hs
