name:                pokerc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/iprokin/pokerc#readme
license:             GPL-3.0
license-file:        LICENSE
author:              Ilya Prokin
maintainer:          isprokin@gmail.com
copyright:           2017 Ilya Prokin
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PokerC
  build-depends:       base >= 4.7 && < 5, random-shuffle, MonadRandom
  default-language:    Haskell2010
  ghc-options:         -O2

executable pokerc
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2
  build-depends:       base, optparse-applicative
                     , pokerc
  default-language:    Haskell2010

test-suite pokerc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pokerc
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/iprokin/pokerc
